--- a/leave_admin_staff.html
+++ b/leave_admin_staff.html
@@ -20,11 +20,11 @@
 		$("#logo").attr("src",$.cookie("loged").split("//")[1]);
 	else $("#logo").attr("src","phps/images/photos/user_icon.png");
 	}
-	else window.location.assign("leavehome.html");
+	else window.location.assign("index.html");
 
 	$(".logout").click(function(){
 		$.removeCookie("loged");
-		window.location.assign("leavehome.html");
+		window.location.assign("index.html");
 	});
 	
 	$("#delete_div,#new_dept_div,#new_desig_div,#delete_staff_details,#edit_staff_details,#submit_table").hide();
