--- a/leave_staff_about.html
+++ b/leave_staff_about.html
@@ -27,7 +27,7 @@
 	});
 	
 	var d=new Date();
-	var date=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate();
+	var date=d.getFullYear()+"-"+(d.getMonth()<10?"0"+(d.getMonth()+1):d.getMonth()+1)+"-"+d.getDate();
 	var lop=0;
 	
 	if($.cookie("loged").split("/")[1]=="Principal"){
