--- a/leave_staff_status.html
+++ b/leave_staff_status.html
@@ -11,7 +11,7 @@
   <script type="text/javascript">
   $(window).load(function(){
 	var d=new Date();
-	var date=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate();
+	var date=d.getFullYear()+"-"+(d.getMonth()<10?"0"+(d.getMonth()+1):d.getMonth()+1)+"-"+d.getDate();
 	var lop=0;
 
 	if($.cookie("loged")){
@@ -96,7 +96,7 @@
 			$("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">HOD</td><td><img src=\"images/pending.png\" width=\"10\" height=\"10\"/></td></tr>");
 		else if($(this).attr("reff").split("//")[3]=="Approve")
 			$("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">HOD</td><td><img src=\"images/tick.jpg\" width=\"10\" height=\"10\"/></td></tr>");
-		else $("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">HOD</td><td><img src=\"images/wrong.jpg\" width=\"10\" height=\"10\"/></td></tr>");
+		else $("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">HOD</td><td><img src=\"images/wrong.png\" width=\"10\" height=\"10\"/></td></tr>");
 		
 		i++;
 		
@@ -104,7 +104,7 @@
 			$("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">Principal</td><td><img src=\"images/pending.png\" width=\"10\" height=\"10\"/></td></tr>");
 		else if($(this).attr("reff").split("//")[4]=="Approve")
 			$("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">Principal</td><td><img src=\"images/tick.jpg\" width=\"10\" height=\"10\"/></td></tr>");
-		else $("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">Principal</td><td><img src=\"images/wrong.jpg\" width=\"10\" height=\"10\"/></td></tr>");
+		else $("#status_details").append("<tr><td>"+(i+1)+"</td><td colspan=\"5\">Principal</td><td><img src=\"images/wrong.png\" width=\"10\" height=\"10\"/></td></tr>");
 		
 		var bb = $('#popup').blurbox({blur: 10, animateBlur: true, bgColor: 'rgba(255,255,0,0.2)'})
 		bb.show();
