--- a/leavepersonal.html
+++ b/leavepersonal.html
@@ -14,7 +14,7 @@
 	$("#leave_report").hide();
 	if($.cookie("loged")){
 		var d=new Date();
-		var date=d.getFullYear()+"-"+d.getMonth()+"-"+d.getDate();
+		var date=d.getFullYear()+"-"+(d.getMonth()<10?"0"+(d.getMonth()+1):d.getMonth()+1)+"-"+d.getDate();
 		var lop=0;
 		
 		$(".login").append("<ul><li>Staff-Id:&nbsp;&nbsp;"+$.cookie("loged").split("/")[0]+"</li><li>Staff-Name:&nbsp;&nbsp;"+$.cookie("loged").split("/")[2]+"</li><li>Staff-Type:&nbsp;&nbsp;"+$.cookie("loged").split("/")[1]+"</li><li><button class=\"logout\"><a>Logout</a></button><button class=\"edit_profile\"><a href=\"leavepersonal.html\">Edit Profile</a></button></li></ul>");
