--- a/leave_staff_approve.html
+++ b/leave_staff_approve.html
@@ -386,14 +386,14 @@
 	});
 	
 	$("#cancel").click(function(){
-		$(this).css("border-bottom","2px solid #1da5ee;");
+		$(this).css("border-bottom","2px solid #1da5ee");
 		$("#new").css("border-bottom","");
 		$("#approve_leave").hide();
 		$("#cancel_leave").show();
 	});
 	
 	$("#new").click(function(){
-		$(this).css("border-bottom","2px solid #1da5ee;");
+		$(this).css("border-bottom","2px solid #1da5ee");
 		$("#cancel").css("border-bottom","");
 		$("#approve_leave").show();
 		$("#cancel_leave").hide();
