--- a/leave_staff_status.html
+++ b/leave_staff_status.html
@@ -131,7 +131,7 @@
 						<div class="topmenu">
                             <ul>
                               <li><a href="leave_staff_home.html">Home</a></li>
-                               <li><a href="leave_admin_personal.html">My Profile</a></li>
+                               <li><a href="leavepersonal.html">My Profile</a></li>
                               <li><a href="leave_staff_apply.html">Apply Leave</a></li>
                               <li><a href="#">Leave Status</a></li>
                               <li><a href="leave_staff_approve.html">Approvals</a></li>
