Validated all emails and contacts. Added profile picture in Admin's profile page. Enabled LOP only if CL is 0.

--- a/leavepersonal.html
+++ b/leavepersonal.html
@@ -230,7 +230,7 @@ table tr td{
                                             $('form').ajaxForm({
                         
                                                 success: function(data) {
-                                                    alert("Your profile updated successfully...");
+                                                    alert(data);
 													location.reload();
                                                     
                                                 }
